bridges/jac-bridge/tests/ui/unsupported_return_type.stderr
error: unsupported return type: `i32`
 --> tests/ui/unsupported_return_type.rs:9:30
  |
9 |         pub fn bad(&self) -> i32 {
  |                              ^^^
